--- a/blog/088.md
+++ b/blog/088.md
@@ -16,7 +16,7 @@ _2023-12-01 10:00:00_
 |邮箱|**[panshiqu@sina.com](mailto:panshiqu@sina.com)**|
 |Github|**[github.com/panshiqu](https://github.com/panshiqu)**|
 
-> 本科学历、英语四级、已离职可随时到岗。
+> 本科学历、英语四级、在职、所在公司原因考虑新的工作机会、可随时到岗。
 >
 > 酷爱编程，希望从事郑州全职 Golang 编程工作。
 >
@@ -25,6 +25,15 @@ _2023-12-01 10:00:00_
 > 工作认真负责、积极主动、容易相处、能承受一定的工作压力，是一个注重学习的人，是一个对理想有执着追求的人。
 
 ## 工作经历
+**河南云游互娱科技有限公司 | Golang** `2024年01月-至今`
+> 负责比赛、狼人杀、你画我猜、帧同步游戏等服务端开发
+* 实现比赛后台部分模块、多个功能对外接口，少量游戏逻辑
+* 封装KCP-GO实现网络多人帧同步游戏服务端所有需求（PICO PARK）
+* 封装RabbitMQ发布与消费，支持连接恢复、死信队列等，实现多业务日志集中处理服务
+* 多游戏实现功能完备的模拟客户端便于自测，批量启动狼人杀配合压力测试
+* 网关连接游戏使用gRPC双向流，实现服务发现、负载均衡可重连
+* 部署、维护、更新线上狼人杀（比赛）正式服务器
+
 **郑州亮点网络技术有限公司 | Golang** `2022年11月-2023年11月`
 > 负责国内、海外捕鱼游戏服务端开发
 * 解决大厅/游戏重复开发两套业务逻辑，数据按需同步到游戏缓存
@@ -55,9 +64,9 @@ _2023-12-01 10:00:00_
 > Golang 开发并上线紫幻麻将游戏（比赛、游戏群、斗地主、双升等）
 
 **河南畅天网络科技有限公司 | C++** `2014年09月-2015年09月`
-> 参与妖精传服务端，新亚家APP服务端以及附属客户端开发工作，前者是纯粹的手机网络游戏，而后者则是类似京东商城的手机应用以及附属弱联网手机游戏。
+> 参与妖精传服务端，新亚家APP服务端以及附属客户端开发工作
 
 **郑州鼎晟科技有限公司 | C++** `2013年12月-2014年08月`
-> Windows平台下DS-Unicomm和Linux平台下AstIP等软件的维护升级，曾参与AstConfig V1.0.0、DS-Unicomm V3.7.0、DS-PanoramicView V1.0.0等项目的研发，参与项目需求分析及实现讨论，日志分析及问题分析和解决客户现场出现的问题，参加和组织公司内部培训。
+> Windows平台下DS-Unicomm和Linux平台下AstIP等软件的维护升级
 
-以下内容摘自我去年的博客（已更新），可查看[原文](085.html)
+以下内容摘自我前年的博客（已部分更新），可查看[原文](085.html)
