--- a/blog/085.md
+++ b/blog/085.md
@@ -53,7 +53,7 @@ _2022-09-01 10:00:00_
 * 总结过常用发行版相关的博客：[Ubuntu](086.html)、[CentOS](083.html)
 
 ### Nginx
-* 反向代理写有[博客](082.html)，在用HTTP(S)&WS(S)[配置](https://github.com/panshiqu/analyst/blob/master/conf.d/cmd.conf)
+* 反向代理写有[博客](082.html)，可用HTTP(S)&WS(S)[配置](https://github.com/panshiqu/analyst/blob/master/conf.d/cmd.conf)
 * 负载均衡简单[配置](070.html#负载均衡)
 
 ### Docker
@@ -83,7 +83,7 @@ _2022-09-01 10:00:00_
 ### Protobuf
 
 ### gRPC
-基于etcd服务注册与发现、自定义负载均衡，请看[这里](./089.html)
+* 基于etcd服务注册与发现、自定义负载均衡，请看[这里](089.html)
 
 ### Certbot
 * 前两年生产环境总是使用它获取免费证书
