--- a/blog/088.md
+++ b/blog/088.md
@@ -7,6 +7,38 @@ _2023-12-01 10:00:00_
 
 * * *
 
+## Print PDF
+* `](0` -> `](https://panshiqu.github.io/blog/0`
+* head title 202X
+* replace table
+
+```html
+<table style="border-collapse: collapse; border: none;">
+  <tbody>
+    <tr style="border: none;">
+      <td style="border: none;">姓名</td>
+      <td style="border: none;"><strong>张圣超</strong></td>
+    </tr>
+    <tr style="border: none;">
+      <td style="border: none;">手机</td>
+      <td style="border: none;"><strong>13526535277</strong></td>
+    </tr>
+    <tr style="border: none;">
+      <td style="border: none;">博客</td>
+      <td style="border: none;"><strong><a href="https://panshiqu.github.io">panshiqu.github.io</a></strong></td>
+    </tr>
+    <tr style="border: none;">
+      <td style="border: none;">邮箱</td>
+      <td style="border: none;"><strong><a href="mailto:panshiqu@sina.com">panshiqu@sina.com</a></strong></td>
+    </tr>
+    <tr style="border: none;">
+      <td style="border: none;">Github</td>
+      <td style="border: none;"><strong><a href="https://github.com/panshiqu">github.com/panshiqu</a></strong></td>
+    </tr>
+  </tbody>
+</table>
+```
+
 ## 个人简介
 
 |:----------|:------------------------|
@@ -69,4 +101,4 @@ _2023-12-01 10:00:00_
 **郑州鼎晟科技有限公司 | C++** `2013年12月-2014年08月`
 > Windows平台下DS-Unicomm和Linux平台下AstIP等软件的维护升级
 
-以下内容摘自我前年的博客（已部分更新），可查看[原文](085.html)
+以下内容摘自我前年的博客（已部分更新），便于展示上面并未详细列出的早期工作内容。可查看[原文](085.html)
