--- a/blog/088.md
+++ b/blog/088.md
@@ -48,7 +48,7 @@ _2023-12-01 10:00:00_
 |邮箱|**[panshiqu@sina.com](mailto:panshiqu@sina.com)**|
 |Github|**[github.com/panshiqu](https://github.com/panshiqu)**|
 
-> 本科学历、英语四级、在职、所在公司原因考虑新的工作机会、可随时到岗。
+> 本科学历、英语四级、已离职可随时到岗。
 >
 > 酷爱编程，希望从事郑州全职 Golang 编程工作。
 >
