--- a/blog/085.md
+++ b/blog/085.md
@@ -76,8 +76,9 @@ _2022-09-01 10:00:00_
 * 开发聊天时大量使用写有[博客](073.html)
 * 相较于MySQL总是需要合理添加索引
 
-### NSQ
-* 曾入门开始写有[博客](057.html)，docker-compose部署[配置](086.html#docker-compose-部署-nsq)
+### RabbitMQ、NSQ
+* RabbitMQ封装的有[SDK](https://github.com/panshiqu/golang/tree/main/rabbitmq)，附带[博客](090.html)。支持发布、消费，连接恢复，死信队列，多种使用场景
+* NSQ曾入门开始写有[博客](057.html)，docker-compose部署[配置](086.html#docker-compose-部署-nsq)
 * 被用于多服务日志集中落地等场景
 
 ### Protobuf
