--- a/blog/085.md
+++ b/blog/085.md
@@ -60,6 +60,9 @@ _2022-09-01 10:00:00_
 * 常用于快速部署项目环境依赖，写有[博客](079.html)，自用部署[备忘](081.html#考虑各种方便请选用-docker-安装-mysql-和-redis)
 * 曾入门开始，学习产物在[这里](https://github.com/panshiqu/docker)
 
+### Kubernetes
+* 常用命令、资源配置[整理](091.html)
+
 ### Jenkins
 * 安装、配置、使用流水线[博客](087.html)
 
