--- a/blog/091.md
+++ b/blog/091.md
@@ -50,14 +50,19 @@ kubectl get pods,services
 # -w, --watch=false
 kubectl get pods --watch
 
+{% raw %}
 # -o, --output=''
-# json, yaml, go-template, jsonpath, wide
+# json, yaml, go-template, jsonpath, custom-columns, wide
 kubectl get pods -o wide
 kubectl get pods -o go-template --template '{{range .items}}{{.metadata.name}}{{"\n"}}{{end}}'
 kubectl get services $SERVICE_NAME -o go-template='{{(index .spec.ports 0).nodePort}}'
+kubectl get services $SERVICE_NAME -o jsonpath='{.spec.ports[0].nodePort}'
 kubectl get pods $POD_NAME --template '{{range $i, $c := .spec.containers}}{{$c.image}}{{end}}'
 kubectl get pods $POD_NAME --template {{.spec.nodeName}}
 kubectl get pods $POD_NAME -o=jsonpath='{.spec.terminationGracePeriodSeconds}'
+kubectl get pods -o custom-columns='POD_IP:.status.podIPs,IMAGE:.spec.containers[0].image'
+kubectl get nodes -o jsonpath='{ $.items[*].status.addresses[?(@.type=="InternalIP")].address }'
+{% endraw %}
 
 kubectl get pods/$POD_NAME services/$SERVICE_NAME
 kubectl get pods $POD_NAME1 $POD_NAME2
@@ -141,13 +146,43 @@ kubectl top pods # 依赖 metrics-server
 
 kubectl label pods $POD_NAME version=v1
 
-kubectl port-forward services $SERVICE_NAME 8080:80
+kubectl port-forward $POD_NAME 8080:80
 
 kubectl edit statefulsets $STATEFULSET_NAME
 
 kubectl cordon $NODE_NAME
 kubectl drain $NODE_NAME --ignore-daemonsets --force --delete-emptydir-data
 kubectl uncordon $NODE_NAME
+
+kubectl explain deployments --recursive
+```
+
+### minikube
+```bash
+# --image-mirror-country='cn'
+# --image-repository='registry.cn-hangzhou.aliyuncs.com/google_containers'
+# --base-image='registry.cn-hangzhou.aliyuncs.com/google_containers/kicbase:v0.0.44'
+minikube start --memory=2048 --cpus=2 --nodes=1
+minikube stop
+minikube delete
+
+minikube dashboard --url
+
+minikube service $SERVICE_NAME --url
+
+minikube addons list
+minikube addons enable metrics-server
+
+minikube node --help
+
+minikube ssh
+```
+
+#### docker
+```bash
+sudo sh get-docker.sh --mirror Aliyun
+
+sudo usermod -aG docker $USER
 ```
 
 _未完..._
