--- a/blog/091.md
+++ b/blog/091.md
@@ -162,6 +162,9 @@ kubectl explain deployments --recursive
 # --image-mirror-country='cn'
 # --image-repository='registry.cn-hangzhou.aliyuncs.com/google_containers'
 # --base-image='registry.cn-hangzhou.aliyuncs.com/google_containers/kicbase:v0.0.44'
+# export HTTP_PROXY=http://192.168.3.177:1087
+# export HTTPS_PROXY=http://192.168.3.177:1087
+# export NO_PROXY=localhost,127.0.0.1,10.96.0.0/12,192.168.59.0/24,192.168.49.0/24,192.168.39.0/24
 minikube start --memory=2048 --cpus=2 --nodes=1
 minikube stop
 minikube delete
@@ -177,12 +180,82 @@ minikube node --help
 
 minikube ssh
 ```
+代理参考[链接](https://minikube.sigs.k8s.io/docs/handbook/vpn_and_proxy/)
 
 #### docker
 ```bash
 sudo sh get-docker.sh --mirror Aliyun
 
 sudo usermod -aG docker $USER
+```
+/etc/docker/daemon.json
+```json
+{
+	"proxies": {
+		"http-proxy": "http://192.168.3.177:1087",
+		"https-proxy": "http://192.168.3.177:1087",
+		"no-proxy": "localhost,127.0.0.0/8"
+	}
+}
+```
+代理参考[链接](https://docs.docker.com/config/daemon/proxy/)
+
+### secrets
+
+#### create
+```bash
+kubectl create secret generic mysql-password --from-literal=password=YOUR_PASSWORD
+```
+
+#### apply
+```bash
+# 创建公钥和相对应的私钥
+openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout nginx.key -out nginx.crt -subj "/CN=my-nginx/O=my-nginx"
+# 对密钥实施 base64 编码
+cat nginx.crt | base64
+cat nginx.key | base64
+# 使用上述命令输出创建如下配置文件
+kubectl apply -f nginxsecrets.yaml
+```
+```yaml
+# nginxsecrets.yaml
+apiVersion: "v1"
+kind: "Secret"
+metadata:
+  name: "nginxsecret"
+  namespace: "default"
+type: kubernetes.io/tls
+data:
+  tls.crt: "YOUR CRT BASE64"
+  tls.key: "YOUR KEY BASE64"
+```
+
+##### generator
+```bash
+cat <<EOF >./kustomization.yaml
+secretGenerator:
+- name: mysql-pass
+  literals:
+  - password=YOUR_PASSWORD
+EOF
+kubectl apply -k .
+```
+
+### configmaps
+
+#### create
+```bash
+kubectl create configmap nginxconfigmap --from-file=default.conf
+```
+
+#### apply
+```yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: example-redis-config
+data:
+  redis-config: "requirepass password"
 ```
 
 _未完..._
