--- a/blog/091.md
+++ b/blog/091.md
@@ -258,4 +258,77 @@ data:
   redis-config: "requirepass password"
 ```
 
+### persistentvolumeclaims
+```yaml
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nginx-pvc
+  labels:
+    run: my-nginx
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
+```
+
+### deployments
+```yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    run: my-nginx
+  name: my-nginx
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      run: my-nginx
+  template:
+    metadata:
+      labels:
+        run: my-nginx
+    spec:
+      volumes:
+      - name: persistent-storage
+        persistentVolumeClaim:
+          claimName: nginx-pvc
+      - name: secret-volume
+        secret:
+          secretName: nginxsecret
+      - name: configmap-volume
+        configMap:
+          name: nginxconfigmap
+      containers:
+      - image: nginx
+        name: my-nginx
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql-password
+              key: password
+        - name: MYSQL_USER
+          value: root
+        ports:
+        - containerPort: 443
+        - containerPort: 80
+        volumeMounts:
+        - name: persistent-storage
+          mountPath: /usr/share/nginx/html
+        - mountPath: /etc/nginx/ssl
+          name: secret-volume
+        - mountPath: /etc/nginx/conf.d
+          name: configmap-volume
+```
+验证如下
+```bash
+hostname > /usr/share/nginx/html/index.html
+curl -k https://localhost
+```
+主要参考[链接](https://kubernetes.io/zh-cn/docs/tutorials/services/connect-applications-service/#securing-the-service)、补充参考[链接](https://kubernetes.io/zh-cn/docs/tutorials/stateful-application/mysql-wordpress-persistent-volume/#%E8%A1%A5%E5%85%85-mysql-%E5%92%8C-wordpress-%E7%9A%84%E8%B5%84%E6%BA%90%E9%85%8D%E7%BD%AE)
+
 _未完..._
