--- a/blog/091.md
+++ b/blog/091.md
@@ -237,6 +237,8 @@ secretGenerator:
 - name: mysql-pass
   literals:
   - password=YOUR_PASSWORD
+# resources:
+  # - mysql-deployment.yaml
 EOF
 kubectl apply -k .
 ```
@@ -247,6 +249,7 @@ kubectl apply -k .
 ```bash
 kubectl create configmap nginxconfigmap --from-file=default.conf
 ```
+[default.conf](https://raw.githubusercontent.com/kubernetes/examples/bc9ca4ca32bb28762ef216386934bef20f1f9930/staging/https-nginx/default.conf)
 
 #### apply
 ```yaml
@@ -306,6 +309,10 @@ spec:
       - image: nginx
         name: my-nginx
         env:
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -324,6 +331,8 @@ spec:
         - mountPath: /etc/nginx/conf.d
           name: configmap-volume
 ```
+相比直接`kubectl create deployment`可设置标签、设置容器名称等等
+
 验证如下
 ```bash
 hostname > /usr/share/nginx/html/index.html
@@ -331,4 +340,194 @@ curl -k https://localhost
 ```
 主要参考[链接](https://kubernetes.io/zh-cn/docs/tutorials/services/connect-applications-service/#securing-the-service)、补充参考[链接](https://kubernetes.io/zh-cn/docs/tutorials/stateful-application/mysql-wordpress-persistent-volume/#%E8%A1%A5%E5%85%85-mysql-%E5%92%8C-wordpress-%E7%9A%84%E8%B5%84%E6%BA%90%E9%85%8D%E7%BD%AE)
 
-_未完..._
+### services
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-nginx
+  labels:
+    run: my-nginx
+spec:
+  type: NodePort
+  ports:
+  - port: 8080
+    targetPort: 80
+    protocol: TCP
+    name: http
+  - port: 443
+    protocol: TCP
+    name: https
+  selector:
+    run: my-nginx
+```
+[无头服务（Headless Services）](https://kubernetes.io/zh-cn/docs/concepts/services-networking/service/#headless-services)`clusterIP: None`
+
+### statefulsets
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: zk-hs
+  labels:
+    app: zk
+spec:
+  ports:
+  - port: 2888
+    name: server
+  - port: 3888
+    name: leader-election
+  clusterIP: None
+  selector:
+    app: zk
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zk-cs
+  labels:
+    app: zk
+spec:
+  ports:
+  - port: 2181
+    name: client
+  selector:
+    app: zk
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: zk
+spec:
+  selector:
+    matchLabels:
+      app: zk
+  serviceName: zk-hs
+  replicas: 3
+  updateStrategy:
+    type: RollingUpdate
+  podManagementPolicy: OrderedReady
+  template:
+    metadata:
+      labels:
+        app: zk
+    spec:
+      containers:
+      - name: kubernetes-zookeeper
+        imagePullPolicy: Always
+        image: "registry.k8s.io/kubernetes-zookeeper:1.0-3.4.10"
+        resources:
+          requests:
+            memory: "1Gi"
+            cpu: "0.5"
+        ports:
+        - containerPort: 2181
+          name: client
+        - containerPort: 2888
+          name: server
+        - containerPort: 3888
+          name: leader-election
+        command:
+        - sh
+        - -c
+        - "start-zookeeper \
+          --servers=3 \
+          --data_dir=/var/lib/zookeeper/data \
+          --data_log_dir=/var/lib/zookeeper/data/log \
+          --conf_dir=/opt/zookeeper/conf \
+          --client_port=2181 \
+          --election_port=3888 \
+          --server_port=2888 \
+          --tick_time=2000 \
+          --init_limit=10 \
+          --sync_limit=5 \
+          --heap=512M \
+          --max_client_cnxns=60 \
+          --snap_retain_count=3 \
+          --purge_interval=12 \
+          --max_session_timeout=40000 \
+          --min_session_timeout=4000 \
+          --log_level=INFO"
+        readinessProbe:
+          exec:
+            command:
+            - sh
+            - -c
+            - "zookeeper-ready 2181"
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+        livenessProbe:
+          exec:
+            command:
+            - sh
+            - -c
+            - "zookeeper-ready 2181"
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+        volumeMounts:
+        - name: datadir
+          mountPath: /var/lib/zookeeper
+      securityContext:
+        runAsUser: 1000
+        fsGroup: 1000
+  volumeClaimTemplates:
+  - metadata:
+      name: datadir
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 10Gi
+```
+[Pod 管理策略](https://kubernetes.io/zh-cn/docs/tutorials/stateful-application/basic-stateful-set/#pod-management-policy)`OrderedReady vs Parallel`
+
+验证如下
+```bash
+nslookup zk-cs
+nslookup zk-hs
+# <statefulset 名称>-<序号索引>.<spec.serviceName>
+nslookup zk-0.zk-hs
+
+kubectl exec zk-0 zkCli.sh create /hello world
+kubectl exec zk-1 zkCli.sh get /hello
+```
+
+参考[链接](https://kubernetes.io/zh-cn/docs/tutorials/stateful-application/zookeeper/#%E5%88%9B%E5%BB%BA%E4%B8%80%E4%B8%AA-zookeeper-ensemble)
+
+#### PodAntiAffinity
+```yaml
+spec:
+  template:
+    spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: "app"
+                    operator: In
+                    values:
+                    - zk
+              topologyKey: "kubernetes.io/hostname"
+```
+
+### poddisruptionbudgets
+```yaml
+apiVersion: policy/v1
+kind: PodDisruptionBudget
+metadata:
+  name: zk-pdb
+spec:
+  selector:
+    matchLabels:
+      app: zk
+  maxUnavailable: 1
+```
+
+### 金丝雀发布
+```bash
+kubectl patch statefulset $STATEFULSET_NAME -p '{"spec":{"updateStrategy":{"type":"RollingUpdate","rollingUpdate":{"partition":3}}}}'
+kubectl patch statefulset $STATEFULSET_NAME --type='json' -p='[{"op":"replace","path":"/spec/template/spec/containers/0/image","value":"IMAGE"}]'
+```
+
+可借助[这个](https://kubernetes.io/zh-cn/docs/tutorials/stateful-application/basic-stateful-set/#creating-a-statefulset)来测试PodAntiAffinity、poddisruptionbudgets、金丝雀发布
