k8s deploy and EFK

--- a/blog/094.md
+++ b/blog/094.md
@@ -40,4 +40,23 @@ go run main.go
 
 ## Kubernetes容器编排
 
+#### 部署
+```bash
+kubectl apply -f https://raw.githubusercontent.com/panshiqu/server/main/k8s/dice.yaml
+
+kubectl create secret generic jwt --from-literal=key=ZGVmYXVsdF9rZXk=
+
+kubectl apply -f https://raw.githubusercontent.com/panshiqu/server/main/k8s/gate.yaml
+
+minikube service gate --url # Mac DockerDesktop minikube print the port
+cd ~/go/src/github.com/panshiqu/server/game_server/game/dice/client
+go run main.go -port 60006
+```
+
+#### EFK (Elasticsearch + Fluentd + Kibana)
+方案取自以下官方文档
+* [日志架构](https://kubernetes.io/zh-cn/docs/concepts/cluster-administration/logging/)
+* [Fluentd](https://docs.fluentd.org/container-deployment/kubernetes)
+* [快速开始系列](https://www.elastic.co/guide/en/cloud-on-k8s/current/k8s-quickstart.html)：其中[Elasticsearch](https://www.elastic.co/guide/en/cloud-on-k8s/current/k8s-deploy-elasticsearch.html)和[Kibana](https://www.elastic.co/guide/en/cloud-on-k8s/current/k8s-deploy-kibana.html)
+
 _未完..._
