--- a/blog/085.md
+++ b/blog/085.md
@@ -22,6 +22,7 @@ _2022-09-01 10:00:00_
 
 ### Go
 * 自16年使用至今
+* [游戏](092.html)、[网关](093.html)应该能很好展现我的架构设计、编程开发能力
 * [网络游戏服务端架构](https://github.com/panshiqu/framework)应该能反映我的水平，我被Fork与Star最多的仓库
 * [Analyst](https://github.com/panshiqu/analyst)是我最近的开源的自用的仍在线成品，可访问[价格曲线](https://line.chainsscan.com)、[交互机器人](https://t.me/analyst1bot)
 * 19年后实现过聊天、代理、充值、监控、统计、后台、采集等系统
@@ -58,9 +59,10 @@ _2022-09-01 10:00:00_
 
 ### Docker
 * 常用于快速部署项目环境依赖，写有[博客](079.html)，自用部署[备忘](081.html#考虑各种方便请选用-docker-安装-mysql-和-redis)
-* 曾入门开始，学习产物在[这里](https://github.com/panshiqu/docker)
+* 服务容器化全过程看[这里](094.html#docker容器化)，早期入门的产物在[这里](https://github.com/panshiqu/docker)
 
 ### Kubernetes
+* 服务的部署、更新，EFK日志架构，请看[这里](094.html#kubernetes容器编排)
 * 常用命令、资源配置[整理](091.html)
 
 ### Jenkins
@@ -87,7 +89,7 @@ _2022-09-01 10:00:00_
 ### Protobuf
 
 ### gRPC
-* 基于etcd服务注册与发现、自定义负载均衡，请看[这里](089.html)
+* 基于etcd服务注册与发现、自定义负载均衡，写有[博客](089.html)
 
 ### Certbot
 * 前两年生产环境总是使用它获取免费证书
