--- a/blog/088.md
+++ b/blog/088.md
@@ -52,7 +52,9 @@ _2023-12-01 10:00:00_
 >
 > 酷爱编程，希望从事郑州全职 Golang 编程工作。
 >
-> 熟悉网络编程、并发编程、消息队列、容器技术、分布式技术、设计模式、数据结构、常用算法，有良好的编码风格。
+> 最近的[博客](https://panshiqu.github.io)能很好的说明可胜任（期望）的工作内容（方向）。
+>
+> 熟悉网络编程、并发编程、消息队列，云原生、云计算、容器化、微服务、分布式，设计模式、数据结构、常用算法，有良好的编码风格。
 >
 > 工作认真负责、积极主动、容易相处、能承受一定的工作压力，是一个注重学习的人，是一个对理想有执着追求的人。
 
