--- a/blog/094.md
+++ b/blog/094.md
@@ -59,4 +59,46 @@ go run main.go -port 60006
 * [Fluentd](https://docs.fluentd.org/container-deployment/kubernetes)
 * [快速开始系列](https://www.elastic.co/guide/en/cloud-on-k8s/current/k8s-quickstart.html)：其中[Elasticsearch](https://www.elastic.co/guide/en/cloud-on-k8s/current/k8s-deploy-elasticsearch.html)和[Kibana](https://www.elastic.co/guide/en/cloud-on-k8s/current/k8s-deploy-kibana.html)
 
+```bash
+kubectl create -f https://download.elastic.co/downloads/eck/2.14.0/crds.yaml
+
+kubectl apply -f https://download.elastic.co/downloads/eck/2.14.0/operator.yaml
+
+cat <<EOF | kubectl apply -f -
+apiVersion: elasticsearch.k8s.elastic.co/v1
+kind: Elasticsearch
+metadata:
+  name: quickstart
+spec:
+  version: 8.15.0
+  nodeSets:
+  - name: default
+    count: 1
+    config:
+      node.store.allow_mmap: false
+EOF
+
+kubectl get secret quickstart-es-elastic-user -o go-template='{{.data.elastic | base64decode}}'
+
+cat <<EOF | kubectl apply -f -
+apiVersion: kibana.k8s.elastic.co/v1
+kind: Kibana
+metadata:
+  name: quickstart
+spec:
+  version: 8.15.0
+  count: 1
+  elasticsearchRef:
+    name: quickstart
+EOF
+
+kubectl port-forward service/quickstart-kb-http 5601
+
+# 复制修改自：https://github.com/fluent/fluentd-kubernetes-daemonset/blob/master/fluentd-daemonset-elasticsearch-rbac.yaml
+curl -s -O https://raw.githubusercontent.com/panshiqu/server/main/k8s/fluentd-daemonset-elasticsearch-rbac.yaml
+kubectl apply -f fluentd-daemonset-elasticsearch-rbac.yaml # 请修改密码 FLUENT_ELASTICSEARCH_PASSWORD
+
+# Open https://localhost:5601
+```
+
 _未完..._
