--- a/blog/092.md
+++ b/blog/092.md
@@ -76,3 +76,5 @@ go run main.go -u=1 -r=1 -seat=-1 -name=dice -auto=false -print=false
 写在最后
 * 写代码的时候，太多想写进博客，确实也有备忘，最后复看代码，还是不要啰哩啰嗦啦
 * 基于此刻源码成文，代码大概率会继续完善，也会尽量同步更新此文，但话不绝对
+
+关于游戏不停服更新的补充：文字说明请看[这里](094.html#更新)，代码修改请看[这里](https://github.com/panshiqu/server/commit/4c2883941900988335f0fbfd05f283991dfdffc3)
