--- a/blog/093.md
+++ b/blog/093.md
@@ -43,7 +43,7 @@ go run main.go -token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MX0.teQ2o406C
 
 简单说明
 * 重启几乎没有代价
-* 优雅退出并非必要，但已实现
+* 优雅停服并非必要，但已实现
 * 会话的成员变量有意没有加锁，后果可控就行
 * 网关连接游戏时会尝试从Redis中获取在线用户所在的服务进行重连（待实现）
 * 同一个网关可以接受同一用户的多个连接即订阅，与不限制同时连接到不同网关的表象保持一致
