--- a/blog/094.md
+++ b/blog/094.md
@@ -77,9 +77,9 @@ spec:
     config:
       node.store.allow_mmap: false
 EOF
-
+{% raw %}
 kubectl get secret quickstart-es-elastic-user -o go-template='{{.data.elastic | base64decode}}'
-
+{% endraw %}
 cat <<EOF | kubectl apply -f -
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
@@ -101,4 +101,32 @@ kubectl apply -f fluentd-daemonset-elasticsearch-rbac.yaml # 请修改密码 FLU
 # Open https://localhost:5601
 ```
 
-_未完..._
+#### 更新
+游戏优雅停服细节说明
+* 请先查看资源配置中对[preStop](https://github.com/panshiqu/server/blob/main/k8s/dice.yaml)的注释
+* 首次收到`SIGTERM`信号，先标记停服后等待所有房间主动解散，没有房间则无需等待
+* 此时服务发现不再分配本服务但允许定向连接，可以进入旧房间但不允许创建新房间
+* 可对本服所有客户端定时持续广播`房间将由系统解散，请主动解散后创建新房间`（待实现）
+* 再次收到`SIGTERM`信号，触发解散现有房间
+
+```bash
+# 可选借助此命令将本地打包的镜像载入minikube
+# minikube image load panshiqu/game_server:1.3
+
+# 可选在修改镜像前后通过调整partition来执行金丝雀发布，用以先更新并验证单个服务，值=replicas-1
+# kubectl patch statefulsets dice -p '{"spec":{"updateStrategy":{"rollingUpdate":{"partition":1}}}}'
+
+kubectl set image statefulsets dice game=panshiqu/game_server:1.3
+
+kubectl rollout status statefulsets dice
+
+# 验证测试不通过可以回滚
+# kubectl rollout undo statefulsets dice
+
+# kubectl patch statefulsets dice -p '{"spec":{"updateStrategy":{"rollingUpdate":{"partition":0}}}}'
+```
+
+网关得益于设计成重启几乎没有代价，客户端只会感到可能因为网络不好而触发了重连
+```bash
+kubectl set image deployments gate gate=panshiqu/gate_server:1.3
+```
