--- a/blog/094.md
+++ b/blog/094.md
@@ -130,3 +130,20 @@ kubectl rollout status statefulsets dice
 ```bash
 kubectl set image deployments gate gate=panshiqu/gate_server:1.3
 ```
+
+部署AB服，客户端老转新服将没有明确的时间限制
+```bash
+# 默认启用A服
+kubectl apply -f https://raw.githubusercontent.com/panshiqu/server/main/k8s/dice-ab.yaml
+
+kubectl set image statefulsets dice-b game=panshiqu/game_server:1.3
+
+# 扩容开B服
+kubectl scale statefulsets dice-b --replicas=2
+
+# 启用B服
+kubectl patch service dice -p '{"spec":{"selector":{"group":"b"}}}'
+
+# 缩容停A服
+kubectl scale statefulsets dice-a --replicas=0
+```
