use client container

--- a/blog/094.md
+++ b/blog/094.md
@@ -24,6 +24,11 @@ docker push panshiqu/game_server:1.0
 docker push panshiqu/gate_server:latest
 docker push panshiqu/gate_server:1
 docker push panshiqu/gate_server:1.0
+
+docker build -t panshiqu/game_server:client --target client-final .
+docker build -t panshiqu/gate_server:client --target client-final .
+docker push panshiqu/game_server:client
+docker push panshiqu/gate_server:client
 ```
 
 #### 验证
@@ -36,6 +41,8 @@ docker run --network server --name gate_server -p 60006:60006 -e JWT_KEY=ZGVmYXV
 
 cd ~/go/src/github.com/panshiqu/server/game_server/game/dice/client
 go run main.go
+
+docker run --network server --rm -it panshiqu/game_server:client ./dice_client -ip dice
 ```
 
 ## Kubernetes容器编排
@@ -51,6 +58,9 @@ kubectl apply -f https://raw.githubusercontent.com/panshiqu/server/main/k8s/gate
 minikube service gate --url # Mac DockerDesktop minikube print the port
 cd ~/go/src/github.com/panshiqu/server/game_server/game/dice/client
 go run main.go -port 60006
+
+kubectl run dice -it --rm --restart Never --image panshiqu/gate_server:client
+./dice_client -ip 127.0.0.1
 ```
 
 #### EFK (Elasticsearch + Fluentd + Kibana)
