improve some blogs

--- a/blog/081.md
+++ b/blog/081.md
@@ -40,9 +40,7 @@ yum install docker
 service docker start
 ```
 
-若服务器在国内，不能成功拉取镜像，可以考虑为 Docker 使用镜像加速器
-
-`/etc/docker/daemon.json` 增加 `"registry-mirrors": ["https://hub-mirror.c.163.com"]` 后重启 Docker
+若服务器在国内，不能成功拉取镜像，请参考[这里](https://docs.docker.com/config/daemon/proxy/)配置代理
 
 * 拉取并开启服务
 
