--- a/blog/091.md
+++ b/blog/091.md
@@ -76,6 +76,9 @@ kubectl get pods $POD_NAME1 $POD_NAME2
 kubectl delete statefulsets $STATEFULSET_NAME --cascade=orphan # 非级联删除，保留Pod
 kubectl delete statefulsets $STATEFULSET_NAME # 级联删除
 
+# -f, --filename=[]
+kubectl delete -f file
+
 # -k, --kustomize=''
 kubectl delete -k .
 ```
@@ -119,6 +122,7 @@ kubectl patch statefulsets $STATEFULSET_NAME --type='json' -p='[{"op": "replace"
 kubectl rollout status deployments $DEPLOYMENT_NAME
 kubectl rollout history statefulsets $STATEFULSET_NAME
 kubectl rollout undo statefulsets $STATEFULSET_NAME
+kubectl rollout restart deployments $DEPLOYMENT_NAME
 ```
 
 #### proxy
@@ -248,6 +252,7 @@ kubectl apply -k .
 
 #### create
 ```bash
+kubectl create configmap fruits --from-literal=fruits=apples
 kubectl create configmap nginxconfigmap --from-file=default.conf
 ```
 [default.conf](https://raw.githubusercontent.com/kubernetes/examples/bc9ca4ca32bb28762ef216386934bef20f1f9930/staging/https-nginx/default.conf)
@@ -321,6 +326,11 @@ spec:
               key: password
         - name: MYSQL_USER
           value: root
+        - name: FRUITS
+          valueFrom:
+            configMapKeyRef:
+              key: fruits
+              name: fruits
         ports:
         - containerPort: 443
         - containerPort: 80
