--- a/blog/094.md
+++ b/blog/094.md
@@ -26,6 +26,7 @@ docker push panshiqu/gate_server:latest
 docker push panshiqu/gate_server:1
 docker push panshiqu/gate_server:1.0
 
+# 记得调整Import，这样才能编出两个不同的版本
 docker build -t panshiqu/game_server:client --target client-final .
 docker build -t panshiqu/gate_server:client --target client-final .
 docker push panshiqu/game_server:client
@@ -61,7 +62,7 @@ cd ~/go/src/github.com/panshiqu/server/game_server/game/dice/client
 go run main.go -port 60006
 
 kubectl run dice -it --rm --restart Never --image panshiqu/gate_server:client
-./dice_client -ip 127.0.0.1
+./dice_client -ip $GATE_SERVICE_HOST
 ```
 
 #### EFK (Elasticsearch + Fluentd + Kibana)
