--- a/blog/066.md
+++ b/blog/066.md
@@ -7,6 +7,12 @@ _2017-04-14 17:24:08_
 
 * * *
 
+**注意**：我初步实现了关于架构的[最新想法](094.html)，代码完成度虽不如这里，但已实现的部分明显有以下优点
+* 面向生产
+* 游戏房间无锁
+* 利用K8s容器编排
+* 取消Manager服务器
+
 ![架构图](./img/066_1.png)
 
 ## Gateway
