--- a/blog/067.md
+++ b/blog/067.md
@@ -7,6 +7,12 @@ _2017-07-07 18:26:34_
 
 * * *
 
+**注意**：我初步实现了关于架构的[最新想法](094.html)，代码完成度虽不如这里，但已实现的部分明显有以下优点
+* 面向生产
+* 游戏房间无锁
+* 利用K8s容器编排
+* 取消Manager服务器
+
 承接自己[《中小型棋牌类网络游戏服务端架构》](./066.html)博文，用Golang实现基础架构逻辑后，准备再次谈谈我的想法。
 
 已实现的逻辑与前文描述有几点不同：
