--- a/blog/088.md
+++ b/blog/088.md
@@ -104,3 +104,8 @@ _2023-12-01 10:00:00_
 > Windows平台下DS-Unicomm和Linux平台下AstIP等软件的维护升级
 
 以下内容摘自我前年的博客（已部分更新），便于展示上面并未详细列出的早期工作内容。可查看[原文](085.html)
+
+## blockchain defi
+Solidity二次开发Compound借贷平台（价格预言系统），Alpha杠杆平台，简单质押平台，发行代币。实现买币助手时有开发简单配套合约
+Golang开发清算、价格刷新机器人，合约一键部署，链上交易统计，链上三方数据采集，以及为前两个开发相应展示管理后台
+知识覆盖数字钱包，中心、去中心化交易所，BTC、TRX、ETH（BNB、MATIC、HT），Chainlink，Subgraph等
