--- a/blog/088.md
+++ b/blog/088.md
@@ -109,3 +109,62 @@ _2023-12-01 10:00:00_
 Solidity二次开发Compound借贷平台（价格预言系统），Alpha杠杆平台，简单质押平台，发行代币。实现买币助手时有开发简单配套合约
 Golang开发清算、价格刷新机器人，合约一键部署，链上交易统计，链上三方数据采集，以及为前两个开发相应展示管理后台
 知识覆盖数字钱包，中心、去中心化交易所，BTC、TRX、ETH（BNB、MATIC、HT），Chainlink，Subgraph等
+
+## history
+
+#### work
+```text
+2013年07月-2013年12月
+郑州星游网络技术有限公司
+软件工程师
+职位类别： C++ 所属行业： 游戏
+拥有技能： Lua
+负责开发快捷搜服务端客户端等相关软件包含升级程序以及浏览器插件，公司有千年私服，负责千年LUA脚本的改写，中间曾负责游戏支付接口的开发工作。
+
+2012年12月-2013年06月
+郑州美奥齿科
+PHP程序以及服务器维护
+职位类别： 网页设计师 所属行业： 互联网
+公司有美工，有网页设计人员，网站管理系统用的是织梦，我负责织梦系统的二次开发，工作附带网站的日常维护，服务器的日常维护等等。期间为公司开发美奥齿科预约到诊共享系统。
+```
+
+#### project
+```text
+业余休息时间开发项目集锦
+2015年05月
+ebase：根据自己对网络游戏服务端基本需求的理解而完成的基本框架，包括网络收发，多线程，定时器，日志，解析配置文件等等。该项目还包含了一个简单的客户端基本程序，已做跨平台支持。
+board和mother：学习Cocos2dx开源移动游戏框架，借助它开发两款应用，熟悉了创建、开发、调试、打包、发布等一系列流程。Github对应项目Bin目录下含有相应的APK安装文件，可以安装试用。
+codec：实现功能类似Protobuf，接口简单，仅有头文件，使用多种设计模式，大量使用类模板及模板特例化技术。
+
+河南畅天新亚家APP手机商城服务端及附属手游客户端开发
+2015年04月
+本项目后被交于武汉分公司继续开发，这里我仅详细说明我负责的已开发完备且未沿用上个项目的内容。采用ebase简单网络框架，项目开始使用C++0x新语法，使用MariaDB数据库，独立完成项目数据库数据表设计，负责移交前商城全部业务逻辑以及通信协议的设计，模块如下：消息分发机制、购物车相关操作、订单相关、回复商品列表及详情（首次请求按客户端要求进行筛选并顺序排列商品编号列表，获取更多时不再重复计算）、关键字搜索商品、用户各种操作等等。项目移交后，转而开发弱联网附属手游，采用Lua语言编写业务逻辑如下：成就、怪物、排名、用户、用户技能、用户随从、商店等等。期间曾尝试Struts2+Mybatis实现后台管理网站，譬如添加商品、用户管理等等。
+
+河南畅天手机网络游戏妖精传服务端
+2014年09月 - 2015年04月
+使用Muduo网络框架，使用Protobuf协议框架，使用MySQL数据库、代码使用MySQL++访问操作数据库。以下枚举我负责的游戏模块：聊天（黑名单、装备、视频）、历练（挂机计时奖励活动）、邮件、背包道具（礼包、强化、附魔、镶嵌、锻造等）、竞技场、排行榜、副本（用户所有副本进度，副本购买，每日、剧情、共享公会副本进度、同时挑战BOSS战副本等）、各种商店（合适商品匹配）、任务、公会（基本具备所有公会应有功能，譬如战旗相关、佣兵相关、会长进货等）、西天之路（闯关开宝箱活动，策划给定规则匹配对手）等等。所有模块对应数据库数据表均自行创建维护，前后端通讯的协议格式均由后端设计维护，配置表创建为Excel文档，程序标明各字段后并由策划填写内容，由工具统一转成Lua格式，前端直接使用，后端则统一再解析。期间独立负责游戏统计程序的实现，并实现策划要求各种统计工作。实现的工具程序有：按规则生成机器玩家信息并导入数据库、规则产生CDKEY程序，数据库备份程序，苹果推送通知程序等等。并协助前端实现项目文件MD5比对差异打更新包程序，且该源码已做跨平台支持。配合前端调试通信协议，配合测试人员测试工作，并修改负责模块相关BUG。
+
+郑州鼎晟全景联络中心DS-PanoramicView项目
+2014年06月 - 2014年08月
+公司研发新项目，公司经调研、需求分析、内部讨论动员开发全景联络中心，将接入电话、网页、微信、微博等等媒体。负责智能路由平台的设计研发，Win 32 DLL 封装ExDB数据库操作，封装PduLink通讯连接管理，单文档实现UI界面，设计坐席和虚拟坐席类，实现订阅框架，坐席请求策略，坐席虚拟坐席状态控制，处理接入媒体接入，增加触发器、存储过程配合程序记录数据库等等。
+
+郑州鼎晟联络中心DS-Unicomm升级版本
+2014年05月 - 2014年05月
+早期联络中心版本，底层在使用KEYGOE设备时并不支持IP电话，此次即是针对这种情况升级CTI程序，兼容已有其它配套程序。负责处理设备IO事件，IP终端注册和注销，IP之间、模拟和IP之间，通话、呼叫转移、协商转移、通话时录音等。
+
+郑州鼎晟Windows平台下图形化配置程序AstConfig
+2014年03月 - 2014年04月
+AstIP在命令行界面的Linux上运行，运行在Windows平台下的AstConfig将简化AstIP的配置过程。负责整理流程节点片段，并实现开始、放音等节点类，XML配置文件读写，封装libssh2与Linux系统通信，正则匹配非INI文件内容，对话框实现AstConfig主界面。
+
+星游网络千年服务端LUA脚本改写工作
+2013年10月 - 2013年12月
+千年服务端游戏流程脚本原是Pascal语言编写，为方便扩展其功能需将其改成LUA脚本，自学LUA游戏脚本语言，中间曾用OpenGL+Lua+C++编写界面小游戏。项目期间，已为公司完成多个千年版本的改写工作并新增多个Lua脚本实现的功能。
+
+星游网络开发快捷搜等相关软件
+2013年07月 - 2013年09月
+主程序采用MFC编写，涵盖主要搜索引擎，切换搜索时不用重新键入关键词，同样的功能也写成了浏览器插件，支持IE浏览器，服务端有统计用户，推送消息等功能，同时为程序实现了在线更新功能。运用Socket、多线程等编程方法，软件UI是采用自绘技术实现。
+
+美奥齿科预约到诊共享系统
+2013年03月 - 2013年04月
+采用MySQL数据库，采用MFC实现桌面程序，采用两种方法连接数据库，系统具有特权用户和普通用户之分，特权用户需要登陆才能进入特权模式，此小型系统具备增、删、改、查等基本功能。
+```
